# aio-goodreads

./: .gitignore  LICENSE  pyproject.toml
aio_goodreads/: client.py
aio_goodreads/types/: author.py  book.py
aio_goodreads/utils/: exceptions.py
tests/: conftest.py  test_client.py
