[tool.poetry]
name = "aio-goodreads"
version = "0.1.0"
description = "Asyncronous Python wrapper for Goodreads API"
authors = ["Mykola Solodukha <mykola.soloduha@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
